# workshop_data_engineering

./: .gitignore  README.md
workshop_docker/: Dockerfile  app.py  pyproject.toml
