[tool.poetry]
name = "workshop-docker"
version = "0.1.0"
description = ""
authors = ["VINICIUS FIALHO <vinicius.fialho96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.1"
streamlit = "^1.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
